[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "landscape-characterization"
description = "Internal tools for landscape characterization"
requires-python = ">=3.9"
dynamic = ["dependencies", "readme", "version"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
readme = { file = ["README.md"] }
